--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,22 +10,22 @@
 /*========== page width ==========*/
 /*========== mixins ==========*/
 :root {
-  --hue-color:250;
+  --hue-color: 250;
   /* HSL color mode */
-  --first-color: hsl(var(--hue-color),69%,61%);
-  --first-color-second: hsl(var(--hue-color),69%,61%);
-  --first-color-alt: hsl(var(--hue-color),57%,53%);
-  --first-color-lighter: hsl(var(--hue-color),92%,85%);
-  --title-color: hsl(var(--hue-color),8%,15%);
-  --text-color: hsl(var(--hue-color),8%,45%);
-  --text-color-light: hsl(var(--hue-color),8%,65%);
-  --input-color: hsl(var(--hue-color),70%,96%);
-  --body-color: hsl(var(--hue-color),60%,99%);
-  --scroll-bar-color: hsl(var(--hue-color),12%,90%);
-  --scroll-thumb-color: hsl(var(--hue-color),12%,80%);
-  --soon-footer-back-color: #FFF;
+  --first-color: hsl(var(--hue-color), 69%, 61%);
+  --first-color-second: hsl(var(--hue-color), 69%, 61%);
+  --first-color-alt: hsl(var(--hue-color), 57%, 53%);
+  --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
+  --title-color: hsl(var(--hue-color), 8%, 15%);
+  --text-color: hsl(var(--hue-color), 8%, 45%);
+  --text-color-light: hsl(var(--hue-color), 8%, 65%);
+  --input-color: hsl(var(--hue-color), 70%, 96%);
+  --body-color: hsl(var(--hue-color), 60%, 99%);
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+  --soon-footer-back-color: #fff;
   --soon-footer-color: var(--first-color);
-  --container-color: #FFF;
+  --container-color: #fff;
   --big-font-size: 3rem;
   --h1-font-size: 2.25rem;
   --h2-font-size: 1.5rem;
@@ -53,16 +53,16 @@ body {
 
 body.dark_theme {
   /* HSL color mode */
-  --first-color-second: hsl(var(--hue-color),30%,8%);
-  --title-color: hsl(var(--hue-color),8%,95%);
-  --text-color: hsl(var(--hue-color),8%,75%);
-  --input-color: hsl(var(--hue-color),29%,16%);
-  --body-color: hsl(var(--hue-color),28%,12%);
-  --container-color: hsl(var(--hue-color),29%,16%);
-  --scroll-bar-color: hsl(var(--hue-color),12%,48%);
-  --scroll-thumb-color: hsl(var(--hue-color),12%,36%);
+  --first-color-second: hsl(var(--hue-color), 30%, 8%);
+  --title-color: hsl(var(--hue-color), 8%, 95%);
+  --text-color: hsl(var(--hue-color), 8%, 75%);
+  --input-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: hsl(var(--hue-color), 28%, 12%);
+  --container-color: hsl(var(--hue-color), 29%, 16%);
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
   --soon-footer-back-color: var(--first-color);
-  --soon-footer-color: #FFF;
+  --soon-footer-color: #fff;
 }
 
 .btn {
@@ -143,11 +143,7 @@ body.dark_theme {
   justify-content: space-between;
   align-items: center;
 }
-#header .nav_container .logo_container {
-  font-weight: 600;
-  font-size: var(--h3-font-size);
-  color: var(--title-color);
-}
+
 #header .nav_container .menu_container {
   display: flex;
   flex-direction: row;
@@ -157,6 +153,7 @@ body.dark_theme {
 #header .nav_container .menu_container #mobile_menu_toggle {
   display: none;
   font-size: 1.5rem;
+  font-weight: bold;
   color: var(--title-color);
   line-height: 100%;
   z-index: 999;
@@ -223,15 +220,18 @@ body.dark_theme {
 }
 #home .social_links {
   /* position: absolute; */
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
   color: var(--first-color);
   right: 0;
-  top: 50%;
-  transform: translate(0, -50%);
+  /* top: 50%; */
+  /* transform: translate(0, -50%); */
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   gap: 10px;
   align-items: flex-start;
+  margin-bottom: 1.5rem;
 }
 #home .social_links a {
   text-decoration: none;
@@ -247,13 +247,14 @@ body.dark_theme {
   align-items: center;
   position: absolute;
   bottom: 30px;
-  left: 15%;
+  left: 45%;
   transition: 0.3s;
   margin: 0 auto;
   color: var(--first-color-alt);
 }
 #home .scroll_down_container .uil-mouse-alt {
   font-size: 2rem;
+  text-align: center;
 }
 #home .scroll_down_container .uil-arrow-down {
   font-size: var(--h3-font-size);
@@ -291,7 +292,6 @@ body.dark_theme {
   color: var(--text-color);
   width: 80%;
   max-width: 330px;
-  margin-bottom: 1.5rem;
 }
 #home .home_content .text_container a {
   text-decoration: none;
@@ -340,7 +340,7 @@ body.dark_theme {
 }
 #about .about_content .about_info a {
   text-decoration: none;
-  color: #FFF;
+  color: #fff;
 }
 #about .about_content .about_info p {
   color: var(--text-color);
@@ -400,11 +400,23 @@ body.dark_theme {
   list-style: none;
   padding: 10px 0;
 }
-#skills .skills_content .skill_container .skill_list li .skill_text span:nth-child(1) {
+#skills
+  .skills_content
+  .skill_container
+  .skill_list
+  li
+  .skill_text
+  span:nth-child(1) {
   float: left;
   color: var(--title-color);
 }
-#skills .skills_content .skill_container .skill_list li .skill_text span:nth-child(2) {
+#skills
+  .skills_content
+  .skill_container
+  .skill_list
+  li
+  .skill_text
+  span:nth-child(2) {
   float: right;
   color: var(--text-color);
 }
@@ -453,33 +465,75 @@ body.dark_theme {
   justify-content: space-between;
   align-items: center;
 }
-#portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_img {
+#portfolio
+  .portfolio_content
+  .swiper
+  .swiper-slide
+  .slide_content
+  .project_img {
   width: 45%;
   border-radius: 0.3rem;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.123);
 }
-#portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_info {
+#portfolio
+  .portfolio_content
+  .swiper
+  .swiper-slide
+  .slide_content
+  .project_info {
   width: 45%;
 }
-#portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_info h3 {
+#portfolio
+  .portfolio_content
+  .swiper
+  .swiper-slide
+  .slide_content
+  .project_info
+  h3 {
   margin-bottom: 1rem;
   color: var(--title-color);
 }
-#portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_info p {
+#portfolio
+  .portfolio_content
+  .swiper
+  .swiper-slide
+  .slide_content
+  .project_info
+  p {
   font-size: var(--normal-font-size);
   margin-bottom: 1rem;
   color: var(--text-color);
 }
-#portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_info a {
+#portfolio
+  .portfolio_content
+  .swiper
+  .swiper-slide
+  .slide_content
+  .project_info
+  a {
   text-decoration: none;
   color: inherit;
 }
-#portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_info .demo_btn .uil-arrow-right {
+#portfolio
+  .portfolio_content
+  .swiper
+  .swiper-slide
+  .slide_content
+  .project_info
+  .demo_btn
+  .uil-arrow-right {
   font-size: var(--h3-font-size);
   margin-left: 5px;
   transition: 0.3s;
 }
-#portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_info .demo_btn:hover .uil-arrow-right {
+#portfolio
+  .portfolio_content
+  .swiper
+  .swiper-slide
+  .slide_content
+  .project_info
+  .demo_btn:hover
+  .uil-arrow-right {
   transition: 0.3s;
   transform: translate(5px, 0);
 }
@@ -495,7 +549,8 @@ body.dark_theme {
   right: -0.5rem;
   outline: none;
 }
-#portfolio .portfolio_content .swiper-button-prev::after, #portfolio .portfolio_content .swiper-button-next::after {
+#portfolio .portfolio_content .swiper-button-prev::after,
+#portfolio .portfolio_content .swiper-button-next::after {
   content: "";
 }
 #portfolio .portfolio_content .swiper-portfolio-icon {
@@ -567,7 +622,8 @@ body.dark_theme {
   font-size: var(--smaller-font-size);
   color: var(--text-color);
 }
-#contact .contact_content .form_container .contact_form .input-group input, #contact .contact_content .form_container .contact_form .input-group textarea {
+#contact .contact_content .form_container .contact_form .input-group input,
+#contact .contact_content .form_container .contact_form .input-group textarea {
   color: var(--title-color);
   width: 100%;
   height: 30px;
@@ -580,16 +636,29 @@ body.dark_theme {
 #contact .contact_content .form_container .contact_form .input-group textarea {
   height: 200px;
 }
-#contact .contact_content .form_container .contact_form .input-group:nth-child(3) {
+#contact
+  .contact_content
+  .form_container
+  .contact_form
+  .input-group:nth-child(3) {
   grid-column-start: 1;
   grid-column-end: 3;
 }
-#contact .contact_content .form_container .contact_form .input-group:nth-child(4) {
+#contact
+  .contact_content
+  .form_container
+  .contact_form
+  .input-group:nth-child(4) {
   grid-column-start: 1;
   grid-column-end: 3;
 }
 #contact .contact_content .form_container #form_submit_btn {
-  margin-top: 10px;
+  margin-top: 16px;
+  /* border-radius: 100px; */
+  /* background-color: transparent;
+  border: 3px solid var(--first-color);
+  color: var(--first-color);
+  font-weight: bold; */
 }
 #contact .contact_content .form_container #form_submit_btn .uil {
   font-size: var(--h3-font-size);
@@ -630,11 +699,12 @@ body.dark_theme {
   align-items: center;
   border-radius: 0.3rem;
   background-color: var(--first-color);
+  /* background-color: #6d59ded4; */
   cursor: pointer;
   display: none;
 }
 .scroll_top_btn .uil {
-  color: #FFF;
+  color: #fff;
   font-size: var(--h1-font-size);
 }
 
@@ -648,7 +718,7 @@ body.dark_theme {
   background-color: var(--scroll-thumb-color);
   border-radius: 0.5rem;
 }
-
+/** ======== Mobile Responsive ======== **/
 @media only screen and (max-width: 685px) {
   body {
     --big-font-size: 2rem;
@@ -668,13 +738,18 @@ body.dark_theme {
   #header {
     position: fixed;
     z-index: 9999;
-    bottom: 0;
+    top: 0;
     left: 0;
     height: 3.5rem;
   }
   #header .nav_container {
     height: 100%;
   }
+
+  #header .nav_container .logo_container img {
+    width: 40px;
+  }
+
   #header .nav_container .menu_container {
     display: flex;
     flex-direction: row-reverse;
@@ -687,21 +762,34 @@ body.dark_theme {
   #header .nav_container .menu_container .menu {
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.06);
     display: none;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     box-sizing: border-box;
-    padding: 15px 3%;
-    height: 210px;
+    padding: 25px 5%;
+    height: 358px;
     padding-bottom: 3.5rem;
     background-color: var(--body-color);
     width: 100%;
+    gap: 8px;
+    padding-top: 48px;
+    padding-bottom: 16px;
+    /* transition: .5s all ease-in-out; */
+
+  }
+  #header .nav_container .menu_container .menu .menu_item:hover {
+    background-color: #6e57e03c;
+    border-radius: 8px;
+    padding-left: 8px;
   }
   #header .nav_container .menu_container .menu .menu_item {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center; */
+    display: flex;
+    flex-direction: row;
     align-items: center;
   }
   #header .nav_container .menu_container .menu .menu_item a {
@@ -711,18 +799,23 @@ body.dark_theme {
   #header .nav_container .menu_container .menu .menu_item .uil {
     display: block;
     font-size: 1.3rem;
+    margin-right: 1rem;
   }
 
   #home {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
-    margin-top: 6rem;
+    align-items: center;
+    /* margin-top: 10rem; */
+    /* min-height: 80vh; */
   }
   #home .social_links {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     top: 2rem;
     transform: translate(0, 0);
+    /* color: red; */
   }
   #home .scroll_down_container {
     display: none;
@@ -771,14 +864,14 @@ body.dark_theme {
     width: 100%;
   }
   #about .about_content .about_info p {
-    text-align: center;
+    /* text-align: center; */
     width: 100%;
   }
   #about .about_content .about_info .stats {
     width: 100%;
   }
   #about .about_content .about_info .CV_btn {
-    margin: 0 auto;
+    margin: 0 ;
   }
 
   #skills .skills_content {
@@ -794,10 +887,20 @@ body.dark_theme {
     justify-content: flex-start;
     align-items: flex-start;
   }
-  #portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_info {
+  #portfolio
+    .portfolio_content
+    .swiper
+    .swiper-slide
+    .slide_content
+    .project_info {
     width: 100%;
   }
-  #portfolio .portfolio_content .swiper .swiper-slide .slide_content .project_img {
+  #portfolio
+    .portfolio_content
+    .swiper
+    .swiper-slide
+    .slide_content
+    .project_img {
     width: 100%;
     margin: 0 auto 20px auto;
   }
@@ -826,9 +929,6 @@ body.dark_theme {
     margin-top: 20px;
   }
 
-  #footer {
-    padding-bottom: 7rem;
-  }
   #footer .footer_content {
     text-align: center;
     display: flex;
@@ -843,6 +943,8 @@ body.dark_theme {
     padding-left: 0;
     margin-bottom: 2rem;
   }
+
+  
 
   .scroll_top_btn {
     bottom: 80px;
